k8s/base/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: supertest
  labels:
    app: worker
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: worker
